--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Typical temporary output file, for testing.
 */output.txt
+*/*/output.txt
 
 # AFS-generated directories that sometimes cause problems.
 */.__afs*
