--- a/codeforces/scripts/template/Makefile
+++ b/codeforces/scripts/template/Makefile
@@ -1,9 +1,9 @@
-CC = gcc
-CFLAGS = -Wall -g -O2 -std=gnu11
+CC = g++
+CFLAGS = -Wall -g -O2 -std=gnu++20
 LDLIBS = -lm
 
 hello: hello.o
-hello.o: hello.c
+hello.o: hello.cpp
 
 clean:
 	rm -f hello
