--- a/kattis/problems/completed/cd/Makefile
+++ b/kattis/problems/completed/cd/Makefile
@@ -2,7 +2,7 @@
 CXXFLAGS = -Wall -g -Og -std=gnu++17
 LDLIBS = -lm
 
-marypartitions: marypartitions.cpp
+cd: cd.cpp
 
 clean:
-	$(RM) marypartitions
+	$(RM) cd
